--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -97,7 +97,7 @@ paypal:
   client-secret: ${SECRET_KEY}
   mode: ${PAYPAL_MODE}
 
-payos:
+payway:
   client-id: ${PAYOS_CLIENT_ID}
   api-key: ${PAYOS_API_KEY}
   checksum-key: ${PAYOS_CHECKSUM_KEY}
