--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.5.0</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
