--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD}
       POSTGRES_USER: ${POSTGRESQL_USER}
     ports:
-      - ${POSTGRESQL_EXTERNAL_PORT}:5432
+      - ${POSTGRESQL_EXTERNAL_PORT}:${POSTGRESQL_PORT}
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ../../var/logs/postgresql:/var/log/postgresql
